# too-much-prolog

./: .pre-commit-config.yaml  .pylintrc  prolog.py  pyproject.toml  unification_test.py
