[tool.poetry]
name = "too-much-prolog"
version = "0.1.0"
description = ""
authors = ["ggzor <30713864+ggzor@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pynvim = "^0.4.3"
pylint = "^2.13.9"
rope = "^1.1.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
